--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "axios-mock-adapter": "^1.22.0",
     "chance": "^1.1.11",
     "date-fns": "^2.30.0",
+    "form-data": "^4.0.2",
     "formik": "^2.4.5",
     "formik-mui": "^5.0.0-alpha.0",
     "framer-motion": "^10.16.4",
@@ -41,6 +42,7 @@
     "lodash": "^4.17.21",
     "moment": "^2.29.4",
     "next": "14.2.7",
+    "node-fetch": "^3.3.2",
     "prop-types": "^15.7.2",
     "react": "^18.3.1",
     "react-apexcharts": "^1.4.1",
